# ai-assistance-guides

./: .gitignore  .instructions.md  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: version-bump.yml
ai_assistant_guides/: AI_ASSISTANT_GUIDELINES.md  ARTIFACT_LOCATION_GUIDE.md  AUTONOMY_POLICY_GUIDE.md  CODE_QUALITY_SUBGUIDE.md  CONVENTIONAL_COMMITS.md  CRITICAL_FILES.md  ERROR_HANDLING_ENTRY_TEMPLATE.md  GUIDE_LOGIC_TEST_TEMPLATE.md  LANGUAGE_POLICY_GUIDE.md  PLANNING_TASK_TEMPLATE.md  PLAN_HANDOVER_TEMPLATE.md  PLAN_HANDOVER_TEMPLATE_v2.md  PLAN_STRUCTURE_GUIDE.md  PLAN_STRUCTURE_GUIDE_v2.md  PROJECT_GUIDES_POLICY.md  README.md  SYSTEMATIZATION_TEMPLATE.md  UV_COMMANDS_GUIDE.md  VALIDATION_LOG_TEMPLATE.md  VALIDATION_POLICY_GUIDE.md
ai_assistant_guides/plan_archive/: README.md  plan_license_metadata_pyproject_2025-07.md  plan_precommit_versioning_2025-07.md  plan_refactor_ai_assistant_guidelines_2025-07.md  plan_refactor_ai_guidelines_2025-07.md
project_guides/: PROJECT_DEVELOPMENT_GUIDE.md
project_policies/: PROJECT_DEVELOPMENT_GUIDE.md
registry/entrypoint/: edits_registry.md  justification_2025-07-15.md  uv_comm_justification.md
registry/plan_handover_template/: edits_registry_plan_handover.md  justification_2025-07-15.md
registry/plan_structure_guide/: justification_2025-07-15.md  plan_structure_edits_registry.md
registry/policies/: conventional_commits_edits.md
