[project]
name = "ai-assistance-guides"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "commitizen>=4.8.3",
    "cz-changeup>=1.1.2",
    "pre-commit>=4.2.0",
]


[tool.commitizen]
name = "cz_changeup"
tag_format = "v$version"
version_scheme = "pep440"
version = "0.1.1"
update_changelog_on_bump = true
major_version_zero = true
version_files = []

[tool.commitizen.changeup]
types = [
  { type = "feat", description = "A new feature" },
  { type = "fix", description = "A bug fix" },
  { type = "perf", description = "A performance improvement" },
  { type = "refactor", description = "Code changes that neither fix a bug nor add a feature" },
  { type = "docs", description = "Documentation only changes" },
  { type = "style", description = "Changes that do not affect the meaning of the code" },
  { type = "test", description = "Adding or updating tests" },
  { type = "chore", description = "Other changes that don't modify src or tests" },
  { type = "build", description = "Changes that affect the build system or external dependencies" },
  { type = "ci", description = "Changes to CI configuration files and scripts" },
  { type = "revert", description = "Reverts a previous commit" }
]

bump_map = [
  { type = "feat", bump = "minor" },
  { type = "fix", bump = "patch" },
  { type = "perf", bump = "patch" },
  { type = "refactor", bump = "patch" }
]
